docs: main README 작성